@@ -1,2 +1,3 @@
-EBUILD nvramtool-9999.ebuild 591 RMD160 af6481a77a391fb2f9febe4f9efae117574a90f0 SHA1 1d3e6a1e59f729213012050249f7f4eeaf99d1e7 SHA256 b9520412558f82fb8158e0c0e20b47a26be9e79ec3942105d171e10dd6e9449d
-MISC ChangeLog 699 RMD160 aed6e9631121255d02a1ef4d3485aaec5be49c9f SHA1 42c49a86539c4f3b34b8d36da32e2328567f20a3 SHA256 2a1eb0a956721b13613f559a23ca32dbd48c6e0b7755454d1ab2dee885ebd241
+EBUILD nvramtool-9999.ebuild 580 RMD160 2cdf56f007323b17bb39c487ff41e3b34b0844ed SHA1 bf520fb66fd849361d904c206dd675781f760988 SHA256 8799bf894da9b996747021692401a78d94ff51b249b208493c4f8e59c4c784ba
+MISC ChangeLog 833 RMD160 5d5c5648e4144a4925e02e337e129df041dfe86c SHA1 f7116e20ab903aef24e79cfe508c6b2a91edc8a6 SHA256 3c60e8c90e55c0bc130e8d4eb98c9b5e01741ee73d71f9307f78b2a90666198e
+MISC metadata.xml 252 RMD160 98e581e345ae7649474731426f74795781bbd896 SHA1 da5d32bd96683be482b926f921805e8cc754f619 SHA256 261fa9fd2ee52f8b5898f381128b854fa20f980d551bc2b6fbabd501f3f01036
